--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="col-lg-6 col-md-8 mx-auto"></div>
       <img
         class="rounded-img"
-        src="IMG_1317.jpg"
+        src="C:\Users\User\Pictures\Saved Pictures\IMG_1317.jpg"
         height="600"
         width="300"
       />
